Activating and deactivating customer accounts
