# routes/api.php
@@ -19,4 +19,4 @@ use Illuminate\Support\Facades\Route;
 
 Route::post('/clients',[ClientsController::class, 'store'])->name('store');
 Route::get('/clients',[ClientsController::class, 'index'])->name('index');
-Route::put('/clients/activation',[ClientsController::class, 'AccountActivation'])->name('AccountActivation');
+Route::put('/clients/activation/{id}',[ClientsController::class, 'AccountActivation'])->name('AccountActivation');
